# st_rag_base

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  onepage_rag.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  router.py
app/clients/: __init__.py  anthropic_client.py  base.py  chat_model.py  embedding.py  openai_client.py  reranker.py
app/core/: __init__.py  config.py  database.py  exceptions.py  graph_db.py  observability.py  redis.py  security.py  vector_db.py
app/middleware/: __init__.py  logging.py  request_context.py
app/models/: __init__.py  base.py  conversation.py  message.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  document.py  graph.py
app/services/: __init__.py  cache.py  memory.py  persistence.py
app/services/ir/: __init__.py  base.py  mock.py
app/services/orchestrator/: __init__.py  base.py  rag_agent.py  routing.py
app/services/workflow/: __init__.py  state.py
app/static/: index.html
app/utils/: __init__.py  logger.py  prompts.py  streaming.py  text.py
app/workers/: __init__.py  tasks.py
config/: logging.conf
docs/phases/: README.md  phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-9.md
migration/: env.py  script.py.mako
migration/versions/: 0001_phase7_users_conversations_messages.py
scripts/: ingest_data.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_chat.py  test_document.py  test_health.py
tests/test_clients/: test_anthropic_client.py  test_chat_model.py  test_embedding.py
tests/test_core/: __init__.py  test_graph_db.py  test_observability.py  test_security.py
tests/test_graph/: test_workflow.py
tests/test_ir/: test_graph_cluster.py  test_graph_extractor.py  test_graph_ingest.py  test_graph_search.py  test_graph_summarizer.py  test_hybrid.py  test_rerank.py  test_vector.py
tests/test_services/: test_cache.py  test_memory.py  test_routing.py
tests/test_utils/: test_prompts.py
(+31 files in other folders)
